# townboard

./: .gitignore  .vercelignore  check_data.js  check_songdo.js  enrich_hallway.mjs  enrich_hallway.py  inspect_excel.py
ai_ready/: README.md  manifest.json
ai_ready/automation_request_ppt/: presentation_summary.json  slides.json  slides.md
ai_ready/install_list/: README.md  sheet_01_rows.jsonl  sheet_02_rows.jsonl  sheet_02_table.csv  sheet_02_table.jsonl  workbook_summary.json
ai_ready/proposal_sample/: README.md  sheet_01_rows.jsonl  sheet_01_table.csv  sheet_01_table.jsonl  sheet_02_rows.jsonl  sheet_02_table.csv  sheet_02_table.jsonl  workbook_summary.json
focusmap/: __init__.py  __main__.py  config.py  geocoder.py  pyproject.toml
infra/wsm.dahanda.dev/: README.md  dahanda-creative.service  env.production.example  nginx.conf
scripts/: convert_to_ai_ready.py  enrich_master_external.py  estimate_coords.py  geocode_master.py
web/: README.md  middleware.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppChrome.tsx  ComplexTable.tsx  CreativePlanPanel.tsx  EmailDraftModal.tsx  EmptyState.tsx  ErrorBanner.tsx  MiningDetailPanel.tsx  MiningResultList.tsx  MiningSearchForm.tsx  PageShell.tsx  ResultMap.tsx  ResultSummary.tsx  SearchForm.tsx  StudioContent.tsx  StudioSidebar.tsx  StudioStepIndicator.tsx
web/hooks/: useStudioState.ts
web/lib/: activityLog.ts  adMinerStore.ts  aggregator.ts  ai-provider.ts  aiParser.ts  calculator.ts  creativePlan.ts  creativeStudio.ts  crm-types.ts  escape.ts  haversine.ts  (+12 more)
(+37 files in other folders)
