[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "focusmap"
version = "1.0.0"
description = "포커스미디어 견적서 자동생성기"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "requests>=2.28",
    "pyarrow>=12.0",
]

[project.scripts]
focusmap = "focusmap.__main__:main"
